<resources>
    <string name="app_name">집똑</string>
    <string name="title_home">홈</string>
    <string name="title_building">건물</string>
    <string name="title_message">메세지</string>
    <string name="title_search">검색</string>
    <string name="title_setting">설정</string>
    <string name="highlightText">하이라이트</string>
    <string name="paymentStatusText">납부 현황</string>
    <string name="moreBtn">더보기</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
