<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_building"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_building" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@android:drawable/sym_action_chat"
        android:title="@string/title_message" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@android:drawable/ic_search_category_default"
        android:title="@string/title_search" />
    <item
        android:id="@+id/navigation_setting"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/title_setting" />

</menu>
