<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.jiptalk.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_building"
        android:name="com.example.jiptalk.ui.building.BuildingFragment"
        android:label="@string/title_building"
        tools:layout="@layout/fragment_building" />

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.example.jiptalk.ui.message.MessageFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_message" />
 <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.jiptalk.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />
 <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.jiptalk.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />

</navigation>