<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tmobile_navigation"
    app:startDestination="@+id/tnavigation_home">

    <fragment
        android:id="@+id/tnavigation_home"
        android:name="com.example.jiptalk.ui.home.THomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_tenant" >
    </fragment>

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.example.jiptalk.ui.message.MessageFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_message" />
    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.jiptalk.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />

</navigation>